# Document-Registry-Rust

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
scripts/: deploy-ledger.sh  did.sh  doc-reg.sh  run-faucet.sh
src/docregistry/: Cargo.toml  docregistry.did
src/docregistry/src/: lib.rs  storage.rs  types.rs
src/document_registry_rust_backend/: Cargo.toml
src/document_registry_rust_frontend/src/: index.html  index.js
