[package]
name = "docregistry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.11"
ic-cdk = "0.11.3"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.8.1"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0"
ic-stable-structures = "0.5.6"
icrc-ledger-types = "0.1.3"
